# rag-cli

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml
dev-notes/: 2025-11-29.md  2025-11-30.md
documents/: sample.txt
